# lightkv

./: .gitignore  CMakeLists.txt  README.md
docs/: architecture.md
scripts/: build.sh  run_benchmark.sh
src/: main.cpp
src/common/: config.cpp  config.h  logger.cpp  logger.h
src/concurrency/: thread_pool.cpp  thread_pool.h
src/core/: entry.h  expire_manager.cpp  expire_manager.h  kv_store.cpp  kv_store.h  lru_cache.cpp  lru_cache.h  shard.cpp  shard.h
src/net/: protocol.cpp  protocol.h  server.cpp  server.h
tests/benchmark/: bench_kv.cpp
tests/unit/: test_expire.cpp  test_kv_store.cpp  test_lru.cpp
